@@ -12,6 +12,6 @@ public class MyArrayListStack<T> {
         if (stack.isEmpty()) {
             throw new EmptyStackException();
         }
-        return stack.remove(stack.size() - 1);
+        return stack.removeFirst();
     }
 }
